--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Horiseon social-media-marketing</title>
 
     <!--css page link-->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
