--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section>
 
         <div id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" 
+            <img src="./images/search-engine-optimization.jpg" class="float-left" 
             alt="search engine optimization"
             />
             <h2>Search Engine Optimization</h2>
@@ -54,7 +54,7 @@
         </div>
 
         <div id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right"
+            <img src="./images/online-reputation-management.jpg" class="float-right"
             alt="online reputation manager"
             />
             <h2>Online Reputation Management</h2>
@@ -64,7 +64,7 @@
         </div>
 
         <div id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left"
+            <img src="./images/social-media-marketing.jpg" class="float-left"
             alt="social media marketing"
             />
             <h2>Social Media Marketing</h2>
@@ -82,7 +82,7 @@
 
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" 
+            <img src="./images/lead-generation.png" 
             alt="lead generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -91,7 +91,7 @@
 
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" 
+            <img src="./images/brand-awareness.png" 
             alt="brand awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -100,7 +100,7 @@
 
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" 
+            <img src="./images/cost-management.png" 
             alt="cost management"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
